k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      serviceAccountName: orders-sa
      containers:
      - name: orders
        image: djibrildh/service-orders:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
  - port: 3002
    targetPort: 3002
